473.	[bug]		jelte
	TCP connections now time out in b10-auth if no (or not all) query
	data is sent by the client. The timeout value defaults to 5000
	milliseconds, but is configurable in Auth/tcp_recv_timeout.
	(Trac #357, git cdf3f04442f8f131542bd1d4a2228a9d0bed12ff)

472.	[build]		jreed
	All generated documentation is removed from the git repository.
	The ./configure --enable-man option is removed. A new option
	-enable-generate-docs is added; it checks for required
	documentation building dependencies. Dummy documentation is
	built and installed if not used. Distributed tarballs will
	contain the generated documentation.
	(Trac #1687, git 2d4063b1a354f5048ca9dfb195e8e169650f43d0)

471.    [bug]		vorner
	Fixed a problem when b10-loadzone tried to tread semicolon
	in string data as start of comment, which caused invalid
	data being loaded.
	(Trac #2188, git 12efec3477feb62d7cbe36bdcfbfc7aa28a36f57)

470.	[func]		naokikambe
	The stats module now supports partial statistics updates. Each
	module can return only statistics data which have been updated since
	the last time it sent them to the stats module. The purpose of partial
	updates is to reduce the amount of statistics data sent through the
	message queue.
	(Trac #2179, git d659abdd9f3f369a29830831297f64484ac7b051)

469.	[bug]		jelte
	libdatasrc: the data source client list class now ignores zone
	content problems (such as out-of-zone data) in MasterFiles type
	zones, instead of aborting the entire configuration.  It only logs
	an error, and all other zones and datasources are still loaded. The
	error log message has been improved to include the zone origin and
	source file name.  As a result of this change, b10-auth no longer
	exits upon encountering such errors during startup.
	(Trac #2178, git a75ed413e8a1c8e3702beea4811a46a1bf519bbd)

468.	[func]*		naokikambe, fujiwara
	b10-stats polls the bind10 and b10-auth with new 'getstats' command
	to retrieve statistics data.  The "poll-interval" parameter in